--- a/rocks.toml
+++ b/rocks.toml
@@ -12,20 +12,26 @@
 # If the plugin name contains a dot then you must add quotes to the key name!
 [plugins]
 "rocks.nvim" = "2.45.2" # rocks.nvim can also manage itself :D
-neorg = "9.3.0"
 "rocks-git.nvim" = "2.5.5"
+neorg = "9.3.0"
 nvim-lspconfig = "2.4.0"
 tree-sitter-cpp = "0.0.45"
 tree-sitter-rust = "0.0.50"
 "which-key.nvim" = "3.17.0"
 nvim-web-devicons = "0.100"
-"mini.icons" = "0.16.0"
-base16-nvim = "scm"
-nvim-autopairs = "scm"
-"lualine.nvim" = "scm"
-barbar = { git = "romgrk/barbar.nvim" }
-# chadtree=  { git = "ms-jpq/chadtree" }
+"snacks.nvim" = { git = "folke/snacks.nvim" }
+"nvim-colorizer.lua" = { git = "norcalli/nvim-colorizer.lua" }
 "yazi.nvim" = { git = "mikavilpas/yazi.nvim" }
 coq = { git = "ms-jpq/coq_nvim" }
 alpha = { git = "goolord/alpha-nvim" }
 toggleterm = { git = "akinsho/toggleterm.nvim" }
+noice = { git = "folke/noice.nvim" }
+"mini.nvim" = { git = "echasnovski/mini.nvim" }
+
+# Plugins I no longer use but keeping in here bc I'm a hoarder:
+# base16-nvim = "scm"
+# nvim-autopairs = "scm"
+# "lualine.nvim" = "scm"
+# barbar = { git = "romgrk/barbar.nvim" }
+# chadtree=  { git = "ms-jpq/chadtree" }
+
